--- a/index.html
+++ b/index.html
@@ -115,32 +115,169 @@
                 </div>
                 <div class="tabs__content rounded rounded-grey">
                     <div class="content content-1">
+                        <input class="input" type="radio" name="tabs-vertical" id="tab-vertical-1" checked>
+                        <input class="input" type="radio" name="tabs-vertical" id="tab-vertical-2">
+                        <input class="input" type="radio" name="tabs-vertical" id="tab-vertical-3">
+                        <input class="input" type="radio" name="tabs-vertical" id="tab-vertical-4">
+                        <input class="input" type="radio" name="tabs-vertical" id="tab-vertical-5">
+                        <input class="input" type="radio" name="tabs-vertical" id="tab-vertical-6">
+                        <input class="input" type="radio" name="tabs-vertical" id="tab-vertical-7">
                         <h3 class="subtitle subtitle-weight-bold nutrition-program__content_title">О рационе</h3>
                         <p class="subtitle subtitle-weight-normal link nutrition-program__content_description">Программа
                             питания «Extra Slim 900» включает в себя 3 приема пищи в день на
                             900kkal Средний вес блюда 230-250гр! Подходит для интенсивного сброса веса, например, перед
                             поездкой на море! В стоимость программы включена бесплатная доставка по Москве!</p>
                         <div class="tabs-vertical__buttons">
-                            <label class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button" for="tab-1">Пн</label>
-                            <label class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button" for="tab-2">Вт</label>
-                            <label class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button" for="tab-3">Ср</label>
-                            <label class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button" for="tab-4">Чт</label>
-                            <label class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button" for="tab-5">Пт</label>
-                            <label class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button" for="tab-6">Сб</label>
-                            <label class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button" for="tab-7">Вс</label>
+                            <label
+                                class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button tabs-vertical-button-1"
+                                for="tab-vertical-1">Пн</label>
+                            <label
+                                class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button tabs-vertical-button-2"
+                                for="tab-vertical-2">Вт</label>
+                            <label
+                                class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button tabs-vertical-button-3"
+                                for="tab-vertical-3">Ср</label>
+                            <label
+                                class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button tabs-vertical-button-4"
+                                for="tab-vertical-4">Чт</label>
+                            <label
+                                class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button tabs-vertical-button-5"
+                                for="tab-vertical-5">Пт</label>
+                            <label
+                                class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button tabs-vertical-button-6"
+                                for="tab-vertical-6">Сб</label>
+                            <label
+                                class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button tabs-vertical-button-7"
+                                for="tab-vertical-7">Вс</label>
                         </div>
                         <div class="tabs-vertical__content">
-                            <div class="upHoverBlock"><img src="assets/img/nutrition-program/item-1.png" alt="">
+                            <div class="content-flex-images content-flex-images-1 tabs-vertical__item">
+                                <div class="upHoverBlock content-flex-image content-flex-image-1"><img
+                                    src="assets/img/nutrition-program/item-1.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-2"><img
+                                    src="assets/img/nutrition-program/item-2.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-3"><img
+                                    src="assets/img/nutrition-program/item-3.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-4"><img
+                                    src="assets/img/nutrition-program/item-4.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-5"><img
+                                    src="assets/img/nutrition-program/item-5.png" alt="">
+                                </div>
                             </div>
-                            <div class="upHoverBlock"><img src="assets/img/nutrition-program/item-2.png" alt="">
+                            <div class="content-flex-images content-flex-images-2 tabs-vertical__item">
+                                <div class="upHoverBlock content-flex-image content-flex-image-1"><img
+                                    src="assets/img/nutrition-program/item-1.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-2"><img
+                                    src="assets/img/nutrition-program/item-2.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-3"><img
+                                    src="assets/img/nutrition-program/item-3.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-4"><img
+                                    src="assets/img/nutrition-program/item-4.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-5"><img
+                                    src="assets/img/nutrition-program/item-5.png" alt="">
+                                </div>
                             </div>
-                            <div class="upHoverBlock"><img src="assets/img/nutrition-program/item-3.png" alt="">
+                            <div class="content-flex-images content-flex-images-3 tabs-vertical__item">
+                                <div class="upHoverBlock content-flex-image content-flex-image-1"><img
+                                    src="assets/img/nutrition-program/item-1.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-2"><img
+                                    src="assets/img/nutrition-program/item-2.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-3"><img
+                                    src="assets/img/nutrition-program/item-3.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-4"><img
+                                    src="assets/img/nutrition-program/item-4.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-5"><img
+                                    src="assets/img/nutrition-program/item-5.png" alt="">
+                                </div>
                             </div>
-                            <div class="upHoverBlock"><img src="assets/img/nutrition-program/item-4.png" alt="">
+                            <div class="content-flex-images content-flex-images-4 tabs-vertical__item">
+                                <div class="upHoverBlock content-flex-image content-flex-image-1"><img
+                                    src="assets/img/nutrition-program/item-1.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-2"><img
+                                    src="assets/img/nutrition-program/item-2.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-3"><img
+                                    src="assets/img/nutrition-program/item-3.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-4"><img
+                                    src="assets/img/nutrition-program/item-4.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-5"><img
+                                    src="assets/img/nutrition-program/item-5.png" alt="">
+                                </div>
                             </div>
-                            <div class="upHoverBlock"><img src="assets/img/nutrition-program/item-5.png" alt="">
+                            <div class="content-flex-images content-flex-images-5 tabs-vertical__item">
+                                <div class="upHoverBlock content-flex-image content-flex-image-1"><img
+                                    src="assets/img/nutrition-program/item-1.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-2"><img
+                                    src="assets/img/nutrition-program/item-2.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-3"><img
+                                    src="assets/img/nutrition-program/item-3.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-4"><img
+                                    src="assets/img/nutrition-program/item-4.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-5"><img
+                                    src="assets/img/nutrition-program/item-5.png" alt="">
+                                </div>
                             </div>
-
+                            <div class="content-flex-images content-flex-images-6 tabs-vertical__item">
+                                <div class="upHoverBlock content-flex-image content-flex-image-1"><img
+                                    src="assets/img/nutrition-program/item-1.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-2"><img
+                                    src="assets/img/nutrition-program/item-2.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-3"><img
+                                    src="assets/img/nutrition-program/item-3.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-4"><img
+                                    src="assets/img/nutrition-program/item-4.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-5"><img
+                                    src="assets/img/nutrition-program/item-5.png" alt="">
+                                </div>
+                            </div>
+                            <div class="content-flex-images content-flex-images-7 tabs-vertical__item">
+                                <div class="upHoverBlock content-flex-image content-flex-image-1"><img
+                                    src="assets/img/nutrition-program/item-1.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-2"><img
+                                    src="assets/img/nutrition-program/item-2.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-3"><img
+                                    src="assets/img/nutrition-program/item-3.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-4"><img
+                                    src="assets/img/nutrition-program/item-4.png" alt="">
+                                </div>
+                                <div class="upHoverBlock content-flex-image content-flex-image-5"><img
+                                    src="assets/img/nutrition-program/item-5.png" alt="">
+                                </div>
+                            </div>
+                            <div class="select">
+                                <select name="select-box" id="selectId" class="select">
+                                    <option value="1 день - 690 р./день" name="value">1 день - 690 р./день</option>
+                                    <option value="7 дней - 621 р./день" name="value">7 дней - 621 р./день</option>
+                                    <option value="14 дней - 607 р./день" name="value">14 дней - 607 р./день</option>
+                                    <option value="28 дней - 552 р./день" name="value">28 дней - 552 р./день</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
                     <div class="content content-2">Текст 2</div>
@@ -154,5 +291,7 @@
     <!-- /.nutrition-program -->
 </main>
 <!-- /main -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="js/select.js"></script>
 </body>
 </html>
