--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="#" class="link header-max__nav_link">Вопросы и ответы</a>
                     <a href="#" class="link header-max__nav_link">Блог</a>
                     <a href="#" class="link header-max__nav_link">Отзывы</a>
-                    <a href="#" class="link header-max__nav_link">Контакты</a>
+                    <a href="#" class="linktabs-vertical__button header-max__nav_link">Контакты</a>
                 </ul>
             </div>
         </div>
@@ -284,7 +284,7 @@
                                 </div>
                                 <span class="subtitle nutrition-program__content_bottom_current-price">4350 ₽</span>
                                 <span class="link nutrition-program__content_bottom_old-price">4830 ₽</span>
-                                <button class="btn gradientButtonGreen">Заказать</button>
+                                <button class="btn gradientButtonGreen tabs-vertical__button">Заказать</button>
                             </div>
 
                         </div>
@@ -458,7 +458,7 @@
                                 </div>
                                 <span class="subtitle nutrition-program__content_bottom_current-price">4350 ₽</span>
                                 <span class="link nutrition-program__content_bottom_old-price">4830 ₽</span>
-                                <button class="btn gradientButtonGreen">Заказать</button>
+                                <button class="btn gradientButtonGreen tabs-vertical__button">Заказать</button>
                             </div>
 
                         </div>
@@ -632,7 +632,7 @@
                                 </div>
                                 <span class="subtitle nutrition-program__content_bottom_current-price">4350 ₽</span>
                                 <span class="link nutrition-program__content_bottom_old-price">4830 ₽</span>
-                                <button class="btn gradientButtonGreen">Заказать</button>
+                                <button class="btn gradientButtonGreen tabs-vertical__button">Заказать</button>
                             </div>
 
                         </div>
@@ -806,7 +806,7 @@
                                 </div>
                                 <span class="subtitle nutrition-program__content_bottom_current-price">4350 ₽</span>
                                 <span class="link nutrition-program__content_bottom_old-price">4830 ₽</span>
-                                <button class="btn gradientButtonGreen">Заказать</button>
+                                <button class="btn gradientButtonGreen tabs-vertical__button">Заказать</button>
                             </div>
 
                         </div>
@@ -980,7 +980,7 @@
                                 </div>
                                 <span class="subtitle nutrition-program__content_bottom_current-price">4350 ₽</span>
                                 <span class="link nutrition-program__content_bottom_old-price">4830 ₽</span>
-                                <button class="btn gradientButtonGreen">Заказать</button>
+                                <button class="btn gradientButtonGreen tabs-vertical__button">Заказать</button>
                             </div>
 
                         </div>
@@ -1006,7 +1006,6 @@
                 <p class="title form__right-text">Цена пробного рациона на любую калорийность — <span>690₽</span>.
                     Благодаря этому дню, вы поймете, какая калорийность вам подходит</p>
             </div>
-
         </div>
     </section>
     <!-- /.form -->
@@ -1215,8 +1214,8 @@
                     </label>
                 </div>
                 <div class="accordion-item">
-                    <input type="radio" name="accordion" id="accordion-2" class="accordion-item__input">
-                    <label for="accordion-2" class="accordion-item__trigger subtitle">
+                    <input type="radio" name="accordion" id="accordion-3" class="accordion-item__input">
+                    <label for="accordion-3" class="accordion-item__trigger subtitle">
                         Lorem ipsum dolor sit amet?
                         <div class="accordion-item__content">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Habitant amet, gravida laoreet non
@@ -1232,8 +1231,8 @@
                     </label>
                 </div>
                 <div class="accordion-item">
-                    <input type="radio" name="accordion" id="accordion-2" class="accordion-item__input">
-                    <label for="accordion-2" class="accordion-item__trigger subtitle">
+                    <input type="radio" name="accordion" id="accordion-4" class="accordion-item__input">
+                    <label for="accordion-4" class="accordion-item__trigger subtitle">
                         Lorem ipsum dolor sit amet?
                         <div class="accordion-item__content">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Habitant amet, gravida laoreet non
@@ -1249,8 +1248,8 @@
                     </label>
                 </div>
                 <div class="accordion-item">
-                    <input type="radio" name="accordion" id="accordion-2" class="accordion-item__input">
-                    <label for="accordion-2" class="accordion-item__trigger subtitle accordion-item__trigger_last">
+                    <input type="radio" name="accordion" id="accordion-5" class="accordion-item__input">
+                    <label for="accordion-5" class="accordion-item__trigger subtitle accordion-item__trigger_last">
                         Lorem ipsum dolor sit amet?
                         <div class="accordion-item__content">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Habitant amet, gravida laoreet non
@@ -1367,17 +1366,46 @@
                         <div class="icon"><img src="assets/img/header/vk.svg" alt="иконка вк"></div>
                     </div>
                 </div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2300.3677004593314!2d56.03025091606936!3d54.79108097321539!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43d9378157df9cb1%3A0x8f3b54196fbe0ffa!2z0LEt0YAg0KHQu9Cw0LLRiywgMTEsINCj0YTQsCwg0KDQtdGB0L8uINCR0LDRiNC60L7RgNGC0L7RgdGC0LDQvSwgNDUwMDc1!5e0!3m2!1sru!2sru!4v1594731212691!5m2!1sru!2sru" width="50%" height="389px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2300.3677004593314!2d56.03025091606936!3d54.79108097321539!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43d9378157df9cb1%3A0x8f3b54196fbe0ffa!2z0LEt0YAg0KHQu9Cw0LLRiywgMTEsINCj0YTQsCwg0KDQtdGB0L8uINCR0LDRiNC60L7RgNGC0L7RgdGC0LDQvSwgNDUwMDc1!5e0!3m2!1sru!2sru!4v1594731212691!5m2!1sru!2sru"
+                    width="50%" height="389px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
             </div>
         </div>
 
     </section>
 </main>
 <!-- /main -->
+<footer class="footer">
+    <div class="container">
+        <div class="footer__content">
+            <span class="footer__link link">Политика конфиденциальности</span>
+            <span class="footer__link link">Разработка и продвижение сайта - <a href="https://ambity.ru/">Амбити</a></span>
+        </div>
+    </div>
+</footer>
+
+<div class="form-wrapper-all">
+    <form action="#" class="form rounded form-modal">
+        <h2 class="title form__title">Заказать звонок</h2>
+        <input class="input-form form__input form__item" type="text" placeholder="Имя">
+        <input class="input-form form__input form__item" type="text" placeholder="Телефон">
+        <button class="btn gradientButtonGreen form__button form__item">
+            <span>Заказать</span>
+        </button>
+        <p class="subtitle form__subtext form-modal__subtext">Нажимая на кнопку "Заказать", я даю свое согласие на обработку
+            персональных данных и принимаю условия соглашения</p>
+    </form>
+    <div class="close-button">
+        &#10006;
+    </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/select.js"></script>
 <script src="js/slider.js"></script>
 <script src="js/reviews.js"></script>
+<script src="js/interface.js"></script>
 </body>
 </html>
