--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@
                             <div class="nutrition-program__content_bottom">
                                 <div class="select">
                                     <select name="select-box" id="selectId" class="select">
-                                        <option value="1 день - 690 р./день" name="value" data-value-price="690">1 день - <b>690</b>р./день</option>
-                                        <option value="7 дней - 621 р./день" name="value" data-value-price="621">>7 дней - <b>621</b>р./день</option>
-                                        <option value="14 дней - 607 р./день" name="value" data-value-price="607">14 дней - <b>607</b>р./день
+                                        <option value="1 день - 690 р./день" name="value" data-value-price="690">1 день - 690р./день</option>
+                                        <option value="7 дней - 621 р./день" name="value" data-value-price="621">7 дней - 621р./день</option>
+                                        <option value="14 дней - 607 р./день" name="value" data-value-price="607">14 дней - 607р./день
                                         </option>
-                                        <option value="28 дней - 552 р./день" name="value" data-value-price="552">28 дней - <b>552</b>р./день
+                                        <option value="28 дней - 552 р./день" name="value" data-value-price="552">28 дней - 552р./день
                                         </option>
                                     </select>
                                 </div>
@@ -448,11 +448,11 @@
                             <div class="nutrition-program__content_bottom">
                                 <div class="select">
                                     <select name="select-box" id="selectId" class="select">
-                                        <option value="1 день - 690 р./день" name="value" data-value-price="690">1 день - <b>690</b>р./день</option>
-                                        <option value="7 дней - 621 р./день" name="value" data-value-price="621">>7 дней - <b>621</b>р./день</option>
-                                        <option value="14 дней - 607 р./день" name="value" data-value-price="607">14 дней - <b>607</b>р./день
+                                        <option value="1 день - 690 р./день" name="value" data-value-price="690">1 день - 690р./день</option>
+                                        <option value="7 дней - 621 р./день" name="value" data-value-price="621">7 дней - 621р./день</option>
+                                        <option value="14 дней - 607 р./день" name="value" data-value-price="607">14 дней - 607р./день
                                         </option>
-                                        <option value="28 дней - 552 р./день" name="value" data-value-price="552">28 дней - <b>552</b>р./день
+                                        <option value="28 дней - 552 р./день" name="value" data-value-price="552">28 дней - 552р./день
                                         </option>
                                     </select>
                                 </div>
@@ -622,11 +622,11 @@
                             <div class="nutrition-program__content_bottom">
                                 <div class="select">
                                     <select name="select-box" id="selectId" class="select">
-                                        <option value="1 день - 690 р./день" name="value" data-value-price="690">1 день - <b>690</b>р./день</option>
-                                        <option value="7 дней - 621 р./день" name="value" data-value-price="621">>7 дней - <b>621</b>р./день</option>
-                                        <option value="14 дней - 607 р./день" name="value" data-value-price="607">14 дней - <b>607</b>р./день
+                                        <option value="1 день - 690 р./день" name="value" data-value-price="690">1 день - 690р./день</option>
+                                        <option value="7 дней - 621 р./день" name="value" data-value-price="621">7 дней - 621р./день</option>
+                                        <option value="14 дней - 607 р./день" name="value" data-value-price="607">14 дней - 607р./день
                                         </option>
-                                        <option value="28 дней - 552 р./день" name="value" data-value-price="552">28 дней - <b>552</b>р./день
+                                        <option value="28 дней - 552 р./день" name="value" data-value-price="552">28 дней - 552р./день
                                         </option>
                                     </select>
                                 </div>
@@ -796,11 +796,11 @@
                             <div class="nutrition-program__content_bottom">
                                 <div class="select">
                                     <select name="select-box" id="selectId" class="select">
-                                        <option value="1 день - 690 р./день" name="value" data-value-price="690">1 день - <b>690</b>р./день</option>
-                                        <option value="7 дней - 621 р./день" name="value" data-value-price="621">>7 дней - <b>621</b>р./день</option>
-                                        <option value="14 дней - 607 р./день" name="value" data-value-price="607">14 дней - <b>607</b>р./день
+                                        <option value="1 день - 690 р./день" name="value" data-value-price="690">1 день - 690р./день</option>
+                                        <option value="7 дней - 621 р./день" name="value" data-value-price="621">7 дней - 621р./день</option>
+                                        <option value="14 дней - 607 р./день" name="value" data-value-price="607">14 дней - 607р./день
                                         </option>
-                                        <option value="28 дней - 552 р./день" name="value" data-value-price="552">28 дней - <b>552</b>р./день
+                                        <option value="28 дней - 552 р./день" name="value" data-value-price="552">28 дней - 552р./день
                                         </option>
                                     </select>
                                 </div>
@@ -970,11 +970,11 @@
                             <div class="nutrition-program__content_bottom">
                                 <div class="select">
                                     <select name="select-box" id="selectId" class="select">
-                                        <option value="1 день - 690 р./день" name="value" data-value-price="690">1 день - <b>690</b>р./день</option>
-                                        <option value="7 дней - 621 р./день" name="value" data-value-price="621">>7 дней - <b>621</b>р./день</option>
-                                        <option value="14 дней - 607 р./день" name="value" data-value-price="607">14 дней - <b>607</b>р./день
+                                        <option value="1 день - 690 р./день" name="value" data-value-price="690">1 день - 690р./день</option>
+                                        <option value="7 дней - 621 р./день" name="value" data-value-price="621">7 дней - 621р./день</option>
+                                        <option value="14 дней - 607 р./день" name="value" data-value-price="607">14 дней - 607р./день
                                         </option>
-                                        <option value="28 дней - 552 р./день" name="value" data-value-price="552">28 дней - <b>552</b>р./день
+                                        <option value="28 дней - 552 р./день" name="value" data-value-price="552">28 дней - 552р./день
                                         </option>
                                     </select>
                                 </div>
