--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
             <a href="tel:+7 920 422-27-76" class="link header-min__link">+7 920 422-27-76</a>
             <a href="#" class="link-underline header-min__link">Заказать звонок</a>
             <div class="header-min__icons">
-                <a href="https://www.instagram.com/avocado_oufa/" class="icon header-min__icon"><img src="assets/img/header/instagram.svg" alt="иконка инстаграма">
+                <a href="https://www.instagram.com/avocado_oufa/" class="icon header-min__icon"><svg width="13" height="12" viewBox="0 0 13 12" fill="red" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.61107 4.06369C5.47381 4.06369 4.54572 4.93379 4.54572 5.99999C4.54572 7.0662 5.47381 7.9363 6.61107 7.9363C7.74834 7.9363 8.67643 7.0662 8.67643 5.99999C8.67643 4.93379 7.74834 4.06369 6.61107 4.06369ZM12.8056 5.99999C12.8056 5.19816 12.8133 4.40359 12.7653 3.60321C12.7173 2.67355 12.4911 1.84848 11.7659 1.16867C11.0393 0.487399 10.1608 0.276772 9.16914 0.231742C8.31387 0.186712 7.46634 0.193975 6.61262 0.193975C5.75735 0.193975 4.90983 0.186712 4.0561 0.231742C3.06449 0.276772 2.18442 0.488851 1.4593 1.16867C0.73263 1.84993 0.507966 2.67355 0.459935 3.60321C0.411903 4.40505 0.41965 5.19962 0.41965 5.99999C0.41965 6.80037 0.411903 7.5964 0.459935 8.39678C0.507966 9.32644 0.73418 10.1515 1.4593 10.8313C2.18597 11.5126 3.06449 11.7232 4.0561 11.7682C4.91138 11.8133 5.7589 11.806 6.61262 11.806C7.46789 11.806 8.31542 11.8133 9.16914 11.7682C10.1608 11.7232 11.0408 11.5111 11.7659 10.8313C12.4926 10.1501 12.7173 9.32644 12.7653 8.39678C12.8149 7.5964 12.8056 6.80183 12.8056 5.99999ZM6.61107 8.97927C4.8525 8.97927 3.43324 7.64869 3.43324 5.99999C3.43324 4.3513 4.8525 3.02072 6.61107 3.02072C8.36965 3.02072 9.7889 4.3513 9.7889 5.99999C9.7889 7.64869 8.36965 8.97927 6.61107 8.97927ZM9.91905 3.5945C9.50846 3.5945 9.17689 3.28364 9.17689 2.89871C9.17689 2.51377 9.50846 2.20291 9.91905 2.20291C10.3296 2.20291 10.6612 2.51377 10.6612 2.89871C10.6613 2.99011 10.6422 3.08064 10.605 3.16511C10.5677 3.24958 10.5131 3.32633 10.4441 3.39096C10.3752 3.45559 10.2933 3.50684 10.2032 3.54177C10.1131 3.57669 10.0166 3.59461 9.91905 3.5945Z" fill="white"/>
+                </svg>
+
                 </a>
-                <a href="https://vk.com/avocado_oufa" class="icon header-min__icon"><img src="assets/img/header/vk.svg" alt="иконка вк"></a>
+                <a href="https://vk.com/avocado_oufa" class="icon header-min__icon"><svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16.0467 1.31865C16.1603 0.985936 16.0467 0.741943 15.5096 0.741943H13.7303C13.2776 0.741943 13.0707 0.953022 12.9571 1.18485C12.9571 1.18485 12.0524 3.13035 10.7705 4.39181C10.3567 4.75888 10.1677 4.87479 9.94213 4.87479C9.82935 4.87479 9.66546 4.75888 9.66546 4.42616V1.31865C9.66546 0.919393 9.53483 0.741943 9.15756 0.741943H6.36167C6.07932 0.741943 5.90894 0.926548 5.90894 1.10257C5.90894 1.48036 6.5499 1.56765 6.61562 2.63235V4.94205C6.61562 5.44792 6.51258 5.54023 6.2854 5.54023C5.68257 5.54023 4.21566 3.58757 3.34509 1.35228C3.17552 0.917962 3.00432 0.742659 2.54997 0.742659H0.771507C0.262795 0.742659 0.161377 0.953738 0.161377 1.18557C0.161377 1.602 0.764205 3.6627 2.96944 6.38812C4.43959 8.24919 6.50933 9.25807 8.39489 9.25807C9.52509 9.25807 9.66465 9.03411 9.66465 8.64773V7.24102C9.66465 6.7931 9.77255 6.70295 10.1304 6.70295C10.3932 6.70295 10.846 6.82029 11.9015 7.71684C13.1072 8.7801 13.3068 9.25736 13.9842 9.25736H15.7627C16.2706 9.25736 16.5246 9.0334 16.3785 8.59121C16.2187 8.15116 15.6426 7.51077 14.8783 6.75303C14.4629 6.32086 13.8423 5.85577 13.6532 5.62323C13.3895 5.32342 13.4658 5.19105 13.6532 4.92488C13.6532 4.92488 15.8211 2.2338 16.0467 1.31865Z" fill="white"/>
+                </svg>
+                </a>
             </div>
         </div>
 
@@ -62,25 +68,25 @@
             <div class="who-this-working">
                 <div class="who-this-working__item">
                     <sub class="link who-this-working__item_title">Рационы от специалистов по питанию</sub>
-                    <div class="icon who-this-working__icon">
+                    <div class="who-this-working__icon">
                         <img src="assets/img/who-this-working/rational.svg" alt="">
                     </div>
                 </div>
                 <div class="who-this-working__item">
                     <sub class="link who-this-working__item_title">Разнообразное меню</sub>
-                    <div class="icon who-this-working__icon">
+                    <div class="who-this-working__icon">
                         <img src="assets/img/who-this-working/various-menu.svg" alt="">
                     </div>
                 </div>
                 <div class="who-this-working__item">
                     <sub class="link who-this-working__item_title">Бесплатная доставка по городу</sub>
-                    <div class="icon who-this-working__icon">
+                    <div class="who-this-working__icon">
                         <img src="assets/img/who-this-working/free-delivery.svg" alt="">
                     </div>
                 </div>
                 <div class="who-this-working__item">
                     <sub class="link who-this-working__item_title">Экономия времени</sub>
-                    <div class="icon who-this-working__icon">
+                    <div class="who-this-working__icon">
                         <img src="assets/img/who-this-working/free-delivery.svg" alt="">
                     </div>
                 </div>
@@ -322,7 +328,7 @@
                                 class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button tabs-vertical-button-2-6"
                                 for="tab-vertical-2-6">Сб</label>
                             <label
-                                class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button tabs-vertical-button-7"
+                                class="tab rounded rounded-grey tab-rounded-button tabs-vertical-button tabs-vertical-button-2-7"
                                 for="tab-vertical-2-7">Вс</label>
                         </div>
                         <div class="tabs-vertical__content">
@@ -1360,10 +1366,15 @@
                             class="contacts__content_item contacts__content_address">г.Уфа, ул. Бульвар Славы, д. 11</span>
                     </div>
                     <div class="contacts__content_item contacts__content_icons">
-                        <a href="https://www.instagram.com/avocado_oufa/" class="icon"><img src="assets/img/header/instagram.svg"
-                                               alt="иконка инстаграма">
+                        <a href="https://www.instagram.com/avocado_oufa/" class="icon"><svg width="13" height="12" viewBox="0 0 13 12" fill="red" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M6.61107 4.06369C5.47381 4.06369 4.54572 4.93379 4.54572 5.99999C4.54572 7.0662 5.47381 7.9363 6.61107 7.9363C7.74834 7.9363 8.67643 7.0662 8.67643 5.99999C8.67643 4.93379 7.74834 4.06369 6.61107 4.06369ZM12.8056 5.99999C12.8056 5.19816 12.8133 4.40359 12.7653 3.60321C12.7173 2.67355 12.4911 1.84848 11.7659 1.16867C11.0393 0.487399 10.1608 0.276772 9.16914 0.231742C8.31387 0.186712 7.46634 0.193975 6.61262 0.193975C5.75735 0.193975 4.90983 0.186712 4.0561 0.231742C3.06449 0.276772 2.18442 0.488851 1.4593 1.16867C0.73263 1.84993 0.507966 2.67355 0.459935 3.60321C0.411903 4.40505 0.41965 5.19962 0.41965 5.99999C0.41965 6.80037 0.411903 7.5964 0.459935 8.39678C0.507966 9.32644 0.73418 10.1515 1.4593 10.8313C2.18597 11.5126 3.06449 11.7232 4.0561 11.7682C4.91138 11.8133 5.7589 11.806 6.61262 11.806C7.46789 11.806 8.31542 11.8133 9.16914 11.7682C10.1608 11.7232 11.0408 11.5111 11.7659 10.8313C12.4926 10.1501 12.7173 9.32644 12.7653 8.39678C12.8149 7.5964 12.8056 6.80183 12.8056 5.99999ZM6.61107 8.97927C4.8525 8.97927 3.43324 7.64869 3.43324 5.99999C3.43324 4.3513 4.8525 3.02072 6.61107 3.02072C8.36965 3.02072 9.7889 4.3513 9.7889 5.99999C9.7889 7.64869 8.36965 8.97927 6.61107 8.97927ZM9.91905 3.5945C9.50846 3.5945 9.17689 3.28364 9.17689 2.89871C9.17689 2.51377 9.50846 2.20291 9.91905 2.20291C10.3296 2.20291 10.6612 2.51377 10.6612 2.89871C10.6613 2.99011 10.6422 3.08064 10.605 3.16511C10.5677 3.24958 10.5131 3.32633 10.4441 3.39096C10.3752 3.45559 10.2933 3.50684 10.2032 3.54177C10.1131 3.57669 10.0166 3.59461 9.91905 3.5945Z" fill="white"/>
+                        </svg>
+
                         </a>
-                        <a href="https://vk.com/avocado_oufa" class="icon"><img src="assets/img/header/vk.svg" alt="иконка вк"></a>
+                        <a href="https://vk.com/avocado_oufa" class="icon"><svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16.0467 1.31865C16.1603 0.985936 16.0467 0.741943 15.5096 0.741943H13.7303C13.2776 0.741943 13.0707 0.953022 12.9571 1.18485C12.9571 1.18485 12.0524 3.13035 10.7705 4.39181C10.3567 4.75888 10.1677 4.87479 9.94213 4.87479C9.82935 4.87479 9.66546 4.75888 9.66546 4.42616V1.31865C9.66546 0.919393 9.53483 0.741943 9.15756 0.741943H6.36167C6.07932 0.741943 5.90894 0.926548 5.90894 1.10257C5.90894 1.48036 6.5499 1.56765 6.61562 2.63235V4.94205C6.61562 5.44792 6.51258 5.54023 6.2854 5.54023C5.68257 5.54023 4.21566 3.58757 3.34509 1.35228C3.17552 0.917962 3.00432 0.742659 2.54997 0.742659H0.771507C0.262795 0.742659 0.161377 0.953738 0.161377 1.18557C0.161377 1.602 0.764205 3.6627 2.96944 6.38812C4.43959 8.24919 6.50933 9.25807 8.39489 9.25807C9.52509 9.25807 9.66465 9.03411 9.66465 8.64773V7.24102C9.66465 6.7931 9.77255 6.70295 10.1304 6.70295C10.3932 6.70295 10.846 6.82029 11.9015 7.71684C13.1072 8.7801 13.3068 9.25736 13.9842 9.25736H15.7627C16.2706 9.25736 16.5246 9.0334 16.3785 8.59121C16.2187 8.15116 15.6426 7.51077 14.8783 6.75303C14.4629 6.32086 13.8423 5.85577 13.6532 5.62323C13.3895 5.32342 13.4658 5.19105 13.6532 4.92488C13.6532 4.92488 15.8211 2.2338 16.0467 1.31865Z" fill="white"/>
+                        </svg>
+                        </a>
                     </div>
                 </div>
                 <iframe
